--- a/index.html
+++ b/index.html
@@ -246,21 +246,21 @@
             );
         };
 
-        // --- NEW CHART COMPONENT ---
+        // --- NEW CHART COMPONENT UPDATED ---
         const MonthChart = ({ data }) => {
             const max = Math.max(...data.map(d => d.value), 1);
             return (
-                <div className="flex items-end gap-2 h-24 mt-4 mb-6 px-2 overflow-x-auto scrollbar-hide border-b border-gray-100 pb-4">
+                <div className="flex items-end gap-3 h-32 mt-4 mb-6 px-2 overflow-x-auto scrollbar-hide border-b border-gray-100 pb-4">
                     {data.map((d, i) => (
-                        <div key={i} className="flex flex-col items-center min-w-[40px]">
-                            <div className="w-full flex justify-center items-end h-full">
+                        <div key={i} className="flex flex-col items-center min-w-[40px] h-full justify-end group">
+                            <div className="flex-1 w-full flex items-end justify-center mb-1">
                                 <div 
-                                    className="w-3 bg-blue-400 rounded-t-sm" 
-                                    style={{ height: `${(d.value / max) * 100}%` }}
+                                    className="w-4 bg-blue-500 rounded-t-md opacity-80 group-hover:opacity-100 transition-all" 
+                                    style={{ height: `${(d.value / max) * 100}%`, minHeight: '4px' }}
                                 ></div>
                             </div>
-                            <div className="text-[9px] text-gray-400 mt-1 uppercase text-center w-full truncate">{d.label}</div>
-                            <div className="text-[9px] font-bold text-gray-600">€{Math.round(d.value)}</div>
+                            <div className="text-[10px] font-bold text-gray-800">€{Math.round(d.value)}</div>
+                            <div className="text-[9px] text-gray-400 uppercase font-bold mt-0.5">{d.label}</div>
                         </div>
                     ))}
                 </div>
