--- a/index.html
+++ b/index.html
@@ -309,13 +309,26 @@
 
         const DashboardView = () => {
             const { clients, reports, followups, ideas, orders, setView, setFollowupForm, setIdeaForm, setOrderForm, handleLogout, fileInputRef, exportToExcel, handleCleanDuplicates } = useContext(CRMContext);
-            const totalOrders = useMemo(() => orders.reduce((acc, curr) => acc + (parseFloat(curr.amount) || 0), 0), [orders]);
+            // MODIFICA: Totale solo per il mese corrente
+            const currentMonthTotal = useMemo(() => {
+                const now = new Date();
+                const currentMonth = now.getMonth();
+                const currentYear = now.getFullYear();
+                return orders.reduce((acc, curr) => {
+                    const d = new Date(curr.createdAt); // createdAt è aggiornato con la data selezionata
+                    if (d.getMonth() === currentMonth && d.getFullYear() === currentYear) {
+                        return acc + (parseFloat(curr.amount) || 0);
+                    }
+                    return acc;
+                }, 0);
+            }, [orders]);
+
             return (
                 <div className="space-y-6 animate-fade-in pb-32">
                     <header><h1 className="text-2xl font-bold text-gray-800">Dashboard</h1></header>
                     <div onClick={() => setView('ordersList')} className="bg-white p-5 rounded-2xl shadow-sm border border-gray-100 flex justify-between items-center cursor-pointer active:scale-95 transition-transform">
-                        <div className="flex items-center space-x-2 text-blue-600"><Icons.ShoppingBag size={24} /><span className="text-xs font-bold uppercase text-gray-400">Totale Ordini</span></div>
-                        <div className="text-3xl font-bold text-gray-800">€ {totalOrders.toFixed(2)}</div>
+                        <div className="flex items-center space-x-2 text-blue-600"><Icons.ShoppingBag size={24} /><span className="text-xs font-bold uppercase text-gray-400">Totale Ordini Mese</span></div>
+                        <div className="text-3xl font-bold text-gray-800">€ {currentMonthTotal.toFixed(2)}</div>
                     </div>
                     <div className="grid grid-cols-2 md:grid-cols-4 gap-4">
                         <div onClick={() => setView('clients')} className="bg-white p-5 rounded-2xl shadow-sm border border-gray-100 cursor-pointer active:scale-95 transition-transform"><Icons.Users className="text-blue-600 mb-2" size={16}/><div className="text-2xl font-bold">{clients.length}</div><div className="text-[10px] text-gray-400 uppercase font-bold">Clienti</div></div>
@@ -896,7 +909,10 @@
                                         <div key={o.id} onClick={() => { setOrderForm(o); setView('createOrder'); }} className="p-4 bg-white rounded-xl border border-gray-100 cursor-pointer active:scale-[0.99] transition-transform">
                                             <div className="flex justify-between font-bold text-gray-800">
                                                 <span>{o.client}</span>
-                                                <span className="text-blue-600">€{parseFloat(o.amount).toFixed(2)}</span>
+                                                <div className="text-right">
+                                                    <div className="text-blue-600">€{parseFloat(o.amount).toFixed(2)}</div>
+                                                    {o.commission > 0 && <div className="text-[10px] text-gray-400 font-normal">Provv. €{parseFloat(o.commission).toFixed(2)}</div>}
+                                                </div>
                                             </div>
                                             <div className="text-xs text-gray-500 mt-1">Ordine: {o.offerNumber} - {new Date(o.createdAt).toLocaleDateString('it-IT')}</div>
                                         </div>
@@ -982,7 +998,10 @@
                                         <div key={o.id} onClick={() => { setOrderForm(o); setView('createOrder'); }} className="p-4 bg-white rounded-xl border border-gray-100 cursor-pointer active:scale-[0.99] transition-transform">
                                             <div className="flex justify-between font-bold text-gray-800">
                                                 <span>{new Date(o.createdAt).toLocaleDateString('it-IT')}</span>
-                                                <span className="text-blue-600">€{parseFloat(o.amount).toFixed(2)}</span>
+                                                <div className="text-right">
+                                                    <div className="text-blue-600">€{parseFloat(o.amount).toFixed(2)}</div>
+                                                    {o.commission > 0 && <div className="text-[10px] text-gray-400 font-normal">Provv. €{parseFloat(o.commission).toFixed(2)}</div>}
+                                                </div>
                                             </div>
                                             <div className="text-xs text-gray-500 mt-1">Ordine: {o.offerNumber}</div>
                                         </div>
