--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
             );
         };
 
-        const Input = ({ label, name, value, onChange, type = 'text', required = false, step = null, placeholder = '' }) => (
+        const Input = ({ label, name, value, onChange, type = 'text', required = false, step = null, placeholder = '', list = null }) => (
             <div>
                 {label && <label className="block text-sm font-bold text-gray-700 mb-1">{label}</label>}
-                <input type={type} name={name} value={value ?? ''} onChange={onChange} required={required} step={step} placeholder={placeholder} 
+                <input type={type} name={name} value={value ?? ''} onChange={onChange} required={required} step={step} placeholder={placeholder} list={list}
                     className="w-full p-3 bg-gray-50 border border-gray-200 rounded-xl focus:ring-2 focus:ring-blue-500 outline-none transition-shadow" />
             </div>
         );
@@ -166,6 +166,29 @@
                         <option value="">Seleziona...</option>
                         {options.map(option => (<option key={option} value={option}>{option}</option>))}
                     </select>
+                </div>
+            );
+        };
+
+        const MultiSelect = ({ label, name, value, onChange, options, height = "max-h-40" }) => {
+            const selected = (typeof value === 'string' && value.length > 0) ? value.split(', ') : [];
+            const toggle = (opt) => {
+                const newSel = selected.includes(opt) ? selected.filter(s => s !== opt) : [...selected, opt];
+                onChange({ target: { name, value: newSel.join(', ') } });
+            };
+            return (
+                <div>
+                    <label className="block text-sm font-bold text-gray-700 mb-1">{label}</label>
+                    <div className={`bg-gray-50 border border-gray-200 rounded-xl p-2 ${height} overflow-y-auto`}>
+                        {options.map(opt => (
+                            <div key={opt} onClick={() => toggle(opt)} className="flex items-center gap-2 p-2 hover:bg-gray-100 rounded cursor-pointer">
+                                <div className={`w-5 h-5 rounded border flex items-center justify-center transition-colors ${selected.includes(opt) ? 'bg-blue-600 border-blue-600' : 'bg-white border-gray-300'}`}>
+                                    {selected.includes(opt) && <Icons.Check size={14} className="text-white" />}
+                                </div>
+                                <span className="text-sm text-gray-700">{opt}</span>
+                            </div>
+                        ))}
+                    </div>
                 </div>
             );
         };
@@ -304,6 +327,7 @@
         const regionsList = ['Abruzzo', 'Basilicata', 'Calabria', 'Campania', 'Emilia-Romagna', 'Friuli-Venezia Giulia', 'Lazio', 'Liguria', 'Lombardia', 'Marche', 'Molise', 'Piemonte', 'Puglia', 'Sardegna', 'Sicilia', 'Toscana', 'Trentino-Alto Adige', 'Umbria', 'Valle d\'Aosta', 'Veneto'];
         const brandsList = ['HILTI', 'WURTH', 'MAKITA', 'BOSCH', 'BERNER'];
         const suppliesList = ['URGENZE', 'SCORTE', 'PIANIFICAZIONE', 'ALTRO'];
+        const areasList = ['ITALIA', 'ESTERO'];
 
         // --- SUB-VIEWS ---
 
@@ -566,13 +590,24 @@
 
 
         const ClientForm = () => {
-            const { clientForm: initialData, saveClient, setView } = useContext(CRMContext);
+            const { clientForm: initialData, saveClient, setView, clients } = useContext(CRMContext);
             const [formData, setFormData] = useState({ contact1: {}, contact2: {}, contact3: {}, contact4: {}, ...initialData });
             const handleChange = (e) => setFormData(p => ({ ...p, [e.target.name]: e.target.value }));
             const handleContactChange = (e, index) => {
                 const { name, value } = e.target;
                 setFormData(p => ({ ...p, [`contact${index}`]: { ...p[`contact${index}`], [name]: value } }));
             };
+
+            const jobTitles = useMemo(() => {
+                const set = new Set();
+                clients.forEach(c => {
+                    for(let i=1; i<=4; i++) {
+                        if(c[`contact${i}`]?.mansione) set.add(c[`contact${i}`].mansione);
+                    }
+                });
+                return Array.from(set).sort();
+            }, [clients]);
+
             return (
                 <div className="animate-fade-in pb-32">
                     <div className="sticky top-0 bg-gray-100/95 py-4 flex justify-between items-center z-20">
@@ -594,9 +629,9 @@
                             <Input label="Magazzino" name="magazzino" value={formData.magazzino} onChange={handleChange} />
                         </SectionContainer>
                         <SectionContainer title="Mercato" icon={Icons.Target}>
-                            <SelectComponent label="Settore" name="settore" value={formData.settore} onChange={handleChange} options={sectorsList} />
-                            <Input label="Aree Geografiche" name="areeGeografiche" value={formData.areeGeografiche} onChange={handleChange} />
-                            <SelectComponent label="Regioni" name="regioni" value={formData.regioni} onChange={handleChange} options={regionsList} />
+                            <MultiSelect label="Settore" name="settore" value={formData.settore} onChange={handleChange} options={sectorsList} />
+                            <MultiSelect label="Aree Geografiche" name="areeGeografiche" value={formData.areeGeografiche} onChange={handleChange} options={areasList} height="max-h-auto" />
+                            <MultiSelect label="Regioni" name="regioni" value={formData.regioni} onChange={handleChange} options={regionsList} />
                         </SectionContainer>
                         <SectionContainer title="Amministrazione" icon={Icons.CreditCard}>
                             <Input label="Metodo Pagamento" name="pagamento" value={formData.pagamento} onChange={handleChange} />
@@ -624,11 +659,18 @@
                             <TextArea label="Comunicazioni" name="comunicazioni" value={formData.comunicazioni} onChange={handleChange} />
                             <TextArea label="Note Generali" name="noteGenerali" value={formData.noteGenerali} onChange={handleChange} />
                             <TextArea label="Conclusione" name="conclusione" value={formData.conclusione} onChange={handleChange} />
-                            <Input label="Valutazione" name="valutazione" value={formData.valutazione} onChange={handleChange} />
+                            <SelectComponent label="Valutazione" name="valutazione" value={formData.valutazione} onChange={handleChange} options={['1','2','3','4','5']} />
                         </SectionContainer>
                         {[1, 2, 3, 4].map(idx => (
                             <SectionContainer key={idx} title={`Contatto ${idx}`} icon={Icons.Users}>
                                 <Input label="Nome" name="nome" value={formData[`contact${idx}`]?.nome} onChange={(e) => handleContactChange(e, idx)} />
+                                <div className="mb-3">
+                                    <label className="block text-sm font-bold text-gray-700 mb-1">Mansione</label>
+                                    <input type="text" list={`mansioni-list-${idx}`} name="mansione" value={formData[`contact${idx}`]?.mansione || ''} onChange={(e) => handleContactChange(e, idx)} className="w-full p-3 bg-gray-50 border border-gray-200 rounded-xl focus:ring-2 focus:ring-blue-500 outline-none transition-shadow" />
+                                    <datalist id={`mansioni-list-${idx}`}>
+                                        {jobTitles.map(t => <option key={t} value={t} />)}
+                                    </datalist>
+                                </div>
                                 <Input label="Tel" name="tel" value={formData[`contact${idx}`]?.tel} onChange={(e) => handleContactChange(e, idx)} />
                                 <Input label="Mail" name="mail" value={formData[`contact${idx}`]?.mail} onChange={(e) => handleContactChange(e, idx)} />
                             </SectionContainer>
@@ -681,7 +723,7 @@
                         {[1, 2, 3, 4].map(idx => {
                             const ct = c[`contact${idx}`];
                             if(!ct?.nome) return null;
-                            return ( <SectionContainer key={idx} title={`Contatto ${idx}`} icon={Icons.Users}><InfoRow label="Nome" value={ct.nome} /><InfoRow label="Tel" value={ct.tel} /><InfoRow label="Mail" value={ct.mail} /></SectionContainer> );
+                            return ( <SectionContainer key={idx} title={`Contatto ${idx}`} icon={Icons.Users}><InfoRow label="Nome" value={ct.nome} /><InfoRow label="Mansione" value={ct.mansione} /><InfoRow label="Tel" value={ct.tel} /><InfoRow label="Mail" value={ct.mail} /></SectionContainer> );
                         })}
                         <div className="grid grid-cols-2 gap-3 pt-4">
                             <button onClick={() => setView('clientReports')} className="bg-white p-4 rounded-xl border flex flex-col items-center gap-1"><Icons.ClipboardList size={20} className="text-gray-400"/><span className="text-xs font-bold">Report</span></button>
