--- a/index.html
+++ b/index.html
@@ -343,6 +343,7 @@
         const brandsList = ['HILTI', 'WURTH', 'MAKITA', 'BOSCH', 'BERNER'];
         const suppliesList = ['URGENZE', 'SCORTE', 'PIANIFICAZIONE', 'ALTRO'];
         const areasList = ['ITALIA', 'ESTERO'];
+        const contactTypesList = ['Visita', 'Telefonata', 'Email', 'WhatsApp', 'Altro'];
 
         // --- SUB-VIEWS ---
 
@@ -393,7 +394,7 @@
         };
 
         const TodoView = () => {
-            const { reports, followups, ideas, setSelectedReport, setView, toggleTaskCompletion } = useContext(CRMContext);
+            const { reports, followups, ideas, setSelectedReport, setFollowupForm, setIdeaForm, setView, toggleTaskCompletion } = useContext(CRMContext);
             const items = useMemo(() => {
                 const arr = [];
                 reports.forEach(r => r.nextContactDate && !r.completed && arr.push({ ...r, type: 'report', label: 'Report', date: r.nextContactDate, icon: Icons.ClipboardList }));
@@ -406,7 +407,11 @@
                     <h1 className="text-2xl font-bold mb-6">Da Fare</h1>
                     <div className="space-y-3">
                         {items.length === 0 ? <div className="text-center py-10 text-gray-400">Tutto fatto!</div> : items.map((item, idx) => (
-                            <div key={idx} onClick={() => { if(item.type === 'report') { setSelectedReport(item); setView('detail'); } }} className="bg-white p-4 rounded-xl border border-gray-100 flex justify-between items-center cursor-pointer">
+                            <div key={idx} onClick={() => { 
+                                if(item.type === 'report') { setSelectedReport(item); setView('detail'); }
+                                else if(item.type === 'offer') { setFollowupForm(item); setView('createFollowup'); }
+                                else if(item.type === 'idea') { setIdeaForm(item); setView('createIdea'); }
+                            }} className="bg-white p-4 rounded-xl border border-gray-100 flex justify-between items-center cursor-pointer active:scale-95 transition-transform">
                                 <div>
                                     <div className="flex items-center gap-2 text-xs font-bold uppercase text-gray-400 mb-1"><item.icon size={12}/> {item.label}</div>
                                     <div className="font-bold text-gray-800">{item.client}</div>
@@ -525,7 +530,10 @@
         const ClientsList = () => {
             const { clients, reports, setView, setSelectedClient, setClientForm } = useContext(CRMContext);
             const [search, setSearch] = useState('');
-            const filtered = clients.filter(c => normalizeForSearch(c.ragioneSociale || '').includes(normalizeForSearch(search)));
+            // MODIFICA: Ordinamento alfabetico
+            const filtered = clients
+                .filter(c => normalizeForSearch(c.ragioneSociale || '').includes(normalizeForSearch(search)))
+                .sort((a, b) => (a.ragioneSociale || '').localeCompare(b.ragioneSociale || ''));
             
             const getStatusBadge = (clientName) => {
                 const clientReports = reports.filter(r => r.client === clientName).sort((a,b) => new Date(b.date) - new Date(a.date));
@@ -612,6 +620,17 @@
                 const { name, value } = e.target;
                 setFormData(p => ({ ...p, [`contact${index}`]: { ...p[`contact${index}`], [name]: value } }));
             };
+
+            const jobTitles = useMemo(() => {
+                const set = new Set();
+                clients.forEach(c => {
+                    for(let i=1; i<=4; i++) {
+                        if(c[`contact${i}`]?.mansione) set.add(c[`contact${i}`].mansione);
+                    }
+                });
+                return Array.from(set).sort();
+            }, [clients]);
+
             return (
                 <div className="animate-fade-in pb-32">
                     <div className="sticky top-0 bg-gray-100/95 py-4 flex justify-between items-center z-20">
@@ -663,11 +682,18 @@
                             <TextArea label="Comunicazioni" name="comunicazioni" value={formData.comunicazioni} onChange={handleChange} />
                             <TextArea label="Note Generali" name="noteGenerali" value={formData.noteGenerali} onChange={handleChange} />
                             <TextArea label="Conclusione" name="conclusione" value={formData.conclusione} onChange={handleChange} />
-                            <Input label="Valutazione" name="valutazione" value={formData.valutazione} onChange={handleChange} />
+                            <SelectComponent label="Valutazione" name="valutazione" value={formData.valutazione} onChange={handleChange} options={['1','2','3','4','5']} />
                         </SectionContainer>
                         {[1, 2, 3, 4].map(idx => (
                             <SectionContainer key={idx} title={`Contatto ${idx}`} icon={Icons.Users}>
                                 <Input label="Nome" name="nome" value={formData[`contact${idx}`]?.nome} onChange={(e) => handleContactChange(e, idx)} />
+                                <div className="mb-3">
+                                    <label className="block text-sm font-bold text-gray-700 mb-1">Mansione</label>
+                                    <input type="text" list={`mansioni-list-${idx}`} name="mansione" value={formData[`contact${idx}`]?.mansione || ''} onChange={(e) => handleContactChange(e, idx)} className="w-full p-3 bg-gray-50 border border-gray-200 rounded-xl focus:ring-2 focus:ring-blue-500 outline-none transition-shadow" />
+                                    <datalist id={`mansioni-list-${idx}`}>
+                                        {jobTitles.map(t => <option key={t} value={t} />)}
+                                    </datalist>
+                                </div>
                                 <Input label="Tel" name="tel" value={formData[`contact${idx}`]?.tel} onChange={(e) => handleContactChange(e, idx)} />
                                 <Input label="Mail" name="mail" value={formData[`contact${idx}`]?.mail} onChange={(e) => handleContactChange(e, idx)} />
                             </SectionContainer>
@@ -720,7 +746,7 @@
                         {[1, 2, 3, 4].map(idx => {
                             const ct = c[`contact${idx}`];
                             if(!ct?.nome) return null;
-                            return ( <SectionContainer key={idx} title={`Contatto ${idx}`} icon={Icons.Users}><InfoRow label="Nome" value={ct.nome} /><InfoRow label="Tel" value={ct.tel} /><InfoRow label="Mail" value={ct.mail} /></SectionContainer> );
+                            return ( <SectionContainer key={idx} title={`Contatto ${idx}`} icon={Icons.Users}><InfoRow label="Nome" value={ct.nome} /><InfoRow label="Mansione" value={ct.mansione} /><InfoRow label="Tel" value={ct.tel} /><InfoRow label="Mail" value={ct.mail} /></SectionContainer> );
                         })}
                         <div className="grid grid-cols-2 gap-3 pt-4">
                             <button onClick={() => setView('clientReports')} className="bg-white p-4 rounded-xl border flex flex-col items-center gap-1"><Icons.ClipboardList size={20} className="text-gray-400"/><span className="text-xs font-bold">Report</span></button>
@@ -750,10 +776,11 @@
                             <div><label className="block text-sm font-bold text-gray-700 mb-1">Referente</label><select name="contactRef" value={formData.contactRef} onChange={handleChange} className="w-full p-3 bg-gray-50 border border-gray-200 rounded-xl outline-none"><option value="">Seleziona...</option>{availableContacts.map((c, idx) => (<option key={idx} value={c.nome}>{c.nome}</option>))}</select></div>
                         )}
                         <div className="grid grid-cols-2 gap-4"><Input label="Data" type="date" name="date" value={formData.date} onChange={handleChange} required /><TimeWheelPicker value={formData.hours} onChange={(val) => setFormData(prev => ({...prev, hours: val}))} /></div>
+                        {/* MODIFICA: Aggiunto campo Tipo Contatto */}
+                        <SelectComponent label="Tipo Contatto" name="contactType" value={formData.contactType} onChange={handleChange} options={contactTypesList} />
                         <SelectComponent label="Categoria" name="category" value={formData.category} onChange={handleChange} options={['MANTENIMENTO RAPPORTO', 'ORDINE', 'RICHIESTA OFFERTA', 'RISCONTRO OFFERTA', 'INIZIO RAPPORTO', 'APPUNTAMENTO', 'ALTRO']} />
                         <TextArea label="Descrizione" name="description" value={formData.description} onChange={handleChange} enableVoice={true} />
                         <SectionContainer title="Follow-up" icon={Icons.AlarmCheck}>
-                            {/* MODIFICA: Griglia per Data e Ora */}
                             <div className="grid grid-cols-2 gap-4">
                                 <Input label="Prossimo Contatto (Data)" type="date" name="nextContactDate" value={formData.nextContactDate} onChange={handleChange} />
                                 <Input label="Ora" type="time" name="nextContactTime" value={formData.nextContactTime} onChange={handleChange} />
@@ -769,7 +796,16 @@
         const ReportList = () => {
             const { reports, setView, setSelectedReport } = useContext(CRMContext);
             const [search, setSearch] = useState('');
-            const filtered = reports.filter(r => normalizeForSearch(r.client).includes(normalizeForSearch(search)) || (r.description || '').toLowerCase().includes(search.toLowerCase()));
+            // MODIFICA: Ordinamento decrescente per data report e poi per data creazione
+            const filtered = reports
+                .filter(r => normalizeForSearch(r.client).includes(normalizeForSearch(search)) || (r.description || '').toLowerCase().includes(search.toLowerCase()))
+                .sort((a, b) => {
+                    const d1 = new Date(b.date).getTime();
+                    const d2 = new Date(a.date).getTime();
+                    if (d1 !== d2) return d1 - d2;
+                    return new Date(b.createdAt || 0).getTime() - new Date(a.createdAt || 0).getTime();
+                });
+
             return (
                 <div className="animate-fade-in pb-32">
                     <h2 className="text-xl font-bold mb-6">Storico Report</h2>
@@ -788,10 +824,12 @@
                 <div className="animate-fade-in pb-32">
                     <div className="flex justify-between items-center mb-6"><button onClick={() => setView('list')} className="p-2 -ml-2 rounded-full hover:bg-gray-200"><Icons.ChevronRight size={24} className="rotate-180" /></button><div className="flex gap-2"><button onClick={() => { setReportForm(report); setView('create'); }} className="p-2 text-blue-600 bg-blue-50 rounded-full"><Icons.Edit2 size={20}/></button><button onClick={async () => { if(await deleteItem('reports', report.id)) setView('list'); }} className="p-2 text-red-500 bg-red-50 rounded-full"><Icons.Trash2 size={20}/></button></div></div>
                     <div className="bg-white p-6 rounded-2xl shadow-sm border border-gray-100 space-y-4">
-                        <InfoBox label="Cliente" value={report.client} icon={Icons.Users} /><InfoBox label="Data" value={new Date(report.date).toLocaleDateString('it-IT')} icon={Icons.Calendar} /><InfoBox label="Categoria" value={report.category} icon={Icons.Target} />
+                        <InfoBox label="Cliente" value={report.client} icon={Icons.Users} /><InfoBox label="Data" value={new Date(report.date).toLocaleDateString('it-IT')} icon={Icons.Calendar} />
+                        {/* MODIFICA: Visualizzazione Tipo Contatto */}
+                        <InfoBox label="Tipo Contatto" value={report.contactType} icon={Icons.Phone} />
+                        <InfoBox label="Categoria" value={report.category} icon={Icons.Target} />
                         <SectionDisplay title="Descrizione" content={report.description} />
                         {report.futureNotes && <SectionDisplay title="Appunti Futuri" content={report.futureNotes} small />}
-                        {/* Re-adding CalendarButton because it's implied by the request */}
                         {report.nextContactDate && (
                             <CalendarButton 
                                 title={`Follow-up: ${report.client}`} 
@@ -809,7 +847,16 @@
         const ClientReportsView = () => {
             const { reports, selectedClient, setView, setSelectedReport } = useContext(CRMContext);
             if(!selectedClient) return null;
-            const filtered = reports.filter(r => r.client === selectedClient.ragioneSociale);
+            // MODIFICA: Ordinamento decrescente per data report e poi per data creazione
+            const filtered = reports
+                .filter(r => r.client === selectedClient.ragioneSociale)
+                .sort((a, b) => {
+                    const d1 = new Date(b.date).getTime();
+                    const d2 = new Date(a.date).getTime();
+                    if (d1 !== d2) return d1 - d2;
+                    return new Date(b.createdAt || 0).getTime() - new Date(a.createdAt || 0).getTime();
+                });
+
             return (
                 <div className="animate-fade-in pb-32">
                      <div className="flex items-center gap-2 mb-6">
@@ -1185,7 +1232,7 @@
                 saveIdea: d => { saveItem('ideas', d); setView('dashboard'); }, 
                 saveOrder: d => { saveItem('orders', d); setView('ordersList'); },
                 deleteItem, toggleTaskCompletion, handleLogout: () => { localStorage.removeItem('crm_user_key'); setUserKey(''); setIsLoggedIn(false); },
-                fileInputRef, exportToExcel, handleCleanDuplicates
+                fileInputRef, exportToExcel, handleCleanDuplicates, setFollowupForm, setIdeaForm
             };
 
             if (!isLoggedIn) return ( <div className="min-h-screen bg-gray-100 flex justify-center items-center p-4"><form onSubmit={(e) => { e.preventDefault(); const val = e.target.elements[0].value.trim(); if(val) { localStorage.setItem('crm_user_key', val); setUserKey(val); setIsLoggedIn(true); } }} className="bg-white p-8 rounded-3xl shadow-xl w-full max-w-sm text-center"><Icons.Lock className="mx-auto mb-4 text-blue-600" size={48}/><h1 className="text-2xl font-bold mb-4">WorkReport CRM</h1><input type="text" placeholder="Chiave Segreta" className="w-full p-4 bg-gray-50 rounded-xl mb-4 text-center font-bold outline-none border focus:border-blue-500"/><button type="submit" className="w-full bg-blue-600 text-white py-3 rounded-xl font-bold">Accedi</button></form></div> );
