--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
             BookOpen: (p) => <IconBase {...p}><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"/><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"/></IconBase>,
             Mic: (p) => <IconBase {...p}><path d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"/><path d="M19 10v2a7 7 0 0 1-14 0v-2"/><line x1="12" x2="12" y1="19" y2="23"/><line x1="8" x2="16" y1="23" y2="23"/></IconBase>,
             ShoppingBag: (p) => <IconBase {...p}><path d="M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4z"/><line x1="3" x2="21" y1="6" y2="6"/><path d="M16 10a4 4 0 0 1-8 0"/></IconBase>,
-            AlertTriangle: (p) => <IconBase {...p}><path d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"/><line x1="12" y1="9" x2="12" y2="13"/><line x1="12" y1="17" x2="12.01" y2="17"/></IconBase>
+            AlertTriangle: (p) => <IconBase {...p}><path d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"/><line x1="12" y1="9" x2="12" y2="13"/><line x1="12" y1="17" x2="12.01" y2="17"/></IconBase>,
+            Phone: (p) => <IconBase {...p}><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/></IconBase>
         };
 
         // --- UI COMPONENTS ---
@@ -578,14 +579,36 @@
 
         const FollowupsListView = () => {
              const { followups, setView, setFollowupForm } = useContext(CRMContext);
+             const totalAmount = useMemo(() => followups.reduce((acc, curr) => acc + (parseFloat(curr.amount) || 0), 0), [followups]);
+
              return (
                  <div className="animate-fade-in pb-32">
-                    <h2 className="text-xl font-bold mb-6">Lista Offerte</h2>
+                    <div className="flex justify-between items-center mb-6">
+                        <h2 className="text-xl font-bold text-gray-800">Lista Offerte</h2>
+                        <button onClick={() => { setFollowupForm({}); setView('createFollowup'); }} className="bg-yellow-500 text-white px-4 py-2 rounded-lg text-sm font-bold flex items-center gap-1">
+                            <Icons.Plus size={16}/> Nuova
+                        </button>
+                    </div>
+                    
+                    {/* Totale Offerte */}
+                    <div className="bg-yellow-500 p-5 rounded-2xl shadow-lg text-white mb-6">
+                        <div className="text-xs font-bold uppercase opacity-80 mb-1">Totale Offerte</div>
+                        <div className="text-3xl font-bold">€ {totalAmount.toFixed(2)}</div>
+                    </div>
+
                     <div className="space-y-3">
                         {followups.map(f => (
                             <div key={f.id} onClick={() => { setFollowupForm(f); setView('createFollowup'); }} className="p-4 bg-white rounded-xl border border-gray-100 cursor-pointer active:scale-[0.99] transition-transform">
-                                <div className="font-bold text-gray-800">{f.client}</div>
-                                <div className="text-xs text-gray-500 mt-1">Offerta {f.offerNumber} - €{f.amount} - Riscontro: {new Date(f.feedbackDate).toLocaleDateString('it-IT')}</div>
+                                <div className="flex justify-between items-start">
+                                    <div>
+                                        <div className="font-bold text-gray-800">{f.client}</div>
+                                        <div className="text-xs text-gray-500 mt-1">Offerta n. {f.offerNumber}</div>
+                                        <div className="text-xs text-gray-400 mt-0.5">Riscontro: {new Date(f.feedbackDate).toLocaleDateString('it-IT')}</div>
+                                    </div>
+                                    <div className="text-right">
+                                        <div className="text-lg font-bold text-yellow-600">€ {parseFloat(f.amount).toFixed(2)}</div>
+                                    </div>
+                                </div>
                             </div>
                         ))}
                     </div>
@@ -597,7 +620,12 @@
              const { ideas, setView, setIdeaForm } = useContext(CRMContext);
              return (
                  <div className="animate-fade-in pb-32">
-                    <h2 className="text-xl font-bold mb-6">Lista Idee</h2>
+                    <div className="flex justify-between items-center mb-6">
+                        <h2 className="text-xl font-bold text-gray-800">Lista Idee</h2>
+                        <button onClick={() => { setIdeaForm({}); setView('createIdea'); }} className="bg-red-600 text-white px-4 py-2 rounded-lg text-sm font-bold flex items-center gap-1">
+                            <Icons.Plus size={16}/> Nuova
+                        </button>
+                    </div>
                     <div className="space-y-3">
                         {ideas.map(i => (
                             <div key={i.id} onClick={() => { setIdeaForm(i); setView('createIdea'); }} className="p-4 bg-white rounded-xl border border-gray-100 cursor-pointer active:scale-[0.99] transition-transform">
@@ -794,7 +822,7 @@
         };
 
         const ReportList = () => {
-            const { reports, setView, setSelectedReport } = useContext(CRMContext);
+            const { reports, setView, setSelectedReport, setReportForm } = useContext(CRMContext);
             const [search, setSearch] = useState('');
             // MODIFICA: Ordinamento decrescente per data report e poi per data creazione
             const filtered = reports
@@ -808,7 +836,12 @@
 
             return (
                 <div className="animate-fade-in pb-32">
-                    <h2 className="text-xl font-bold mb-6">Storico Report</h2>
+                    <div className="flex justify-between items-center mb-6">
+                        <h2 className="text-xl font-bold text-gray-800">Storico Report</h2>
+                        <button onClick={() => { setReportForm({}); setView('create'); }} className="bg-gray-600 text-white px-4 py-2 rounded-lg text-sm font-bold flex items-center gap-1">
+                            <Icons.Plus size={16}/> Nuovo
+                        </button>
+                    </div>
                     <div className="mb-4 relative"><Icons.Search className="absolute left-3 top-1/2 -translate-y-1/2 text-gray-400"/><input type="text" placeholder="Cerca..." value={search} onChange={e => setSearch(e.target.value)} className="w-full pl-10 p-3 bg-white border border-gray-200 rounded-xl text-sm outline-none" /></div>
                     <div className="space-y-3">
                         {filtered.map(r => (<div key={r.id} onClick={() => { setSelectedReport(r); setView('detail'); }} className="p-4 bg-white rounded-xl border border-gray-100 cursor-pointer active:scale-[0.99] transition-transform"><div className="font-bold text-gray-800">{r.client}</div><div className="text-xs text-gray-500 mt-1">{new Date(r.date).toLocaleDateString('it-IT')} - {r.category}</div></div>))}
@@ -923,7 +956,7 @@
                             <Input label="N. Ordine" name="offerNumber" value={formData.offerNumber} onChange={handleChange} required />
                         </div>
                         <Input label="Importo (€)" type="number" step="0.01" name="amount" value={formData.amount} onChange={handleChange} required />
-                        <Input label="Provvigione (€)" type="number" step="0.01" name="commission" value={formData.commission} onChange={handleChange} />
+                        <Input label="Provvigione (€)" type="number" step="0.01" name="commission" value={formData.commission} onChange={handleChange} required />
                         <div className="pt-2 flex gap-3"><button type="button" onClick={() => setView('ordersList')} className="flex-1 py-3 bg-gray-100 text-gray-700 font-bold rounded-xl">Annulla</button><button type="submit" className="flex-1 py-3 bg-blue-600 text-white font-bold rounded-xl shadow-lg flex justify-center gap-2"><Icons.Save size={18} /> Salva</button></div>
                     </form>
                 </div>
@@ -1232,7 +1265,7 @@
                 saveIdea: d => { saveItem('ideas', d); setView('dashboard'); }, 
                 saveOrder: d => { saveItem('orders', d); setView('ordersList'); },
                 deleteItem, toggleTaskCompletion, handleLogout: () => { localStorage.removeItem('crm_user_key'); setUserKey(''); setIsLoggedIn(false); },
-                fileInputRef, exportToExcel, handleCleanDuplicates, setFollowupForm, setIdeaForm
+                fileInputRef, exportToExcel, handleCleanDuplicates, setFollowupForm, setIdeaForm, setReportForm // Added missing export
             };
 
             if (!isLoggedIn) return ( <div className="min-h-screen bg-gray-100 flex justify-center items-center p-4"><form onSubmit={(e) => { e.preventDefault(); const val = e.target.elements[0].value.trim(); if(val) { localStorage.setItem('crm_user_key', val); setUserKey(val); setIsLoggedIn(true); } }} className="bg-white p-8 rounded-3xl shadow-xl w-full max-w-sm text-center"><Icons.Lock className="mx-auto mb-4 text-blue-600" size={48}/><h1 className="text-2xl font-bold mb-4">WorkReport CRM</h1><input type="text" placeholder="Chiave Segreta" className="w-full p-4 bg-gray-50 rounded-xl mb-4 text-center font-bold outline-none border focus:border-blue-500"/><button type="submit" className="w-full bg-blue-600 text-white py-3 rounded-xl font-bold">Accedi</button></form></div> );
